# opendss-mcp-server

./: .codecov.yml  .cursorrules  .gitignore  CHANGELOG.md  CI_CD_SUMMARY.md  CLAUDE.md  GITHUB_ACTIONS_COMPLETE.md  LAUNCH_CHECKLIST.md  MANIFEST.in  PACKAGE_SUMMARY.md  PUBLISHING.md  README.md  VERIFICATION.md  claude_desktop_config.json  pyproject.toml  verify_complete.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  lint.yml  publish.yml  test.yml
docs/: ANNOUNCEMENT.md  API_REFERENCE.md  INSTALLATION.md  USER_GUIDE.md
examples/: .gitkeep  README.md  generate_plots.py  test_server.py
paper/: Makefile  README.md  SUBMISSION_CHECKLIST.md  cover_letter.tex  opendss_mcp_softwarex.tex
src/opendss_mcp/: server.py
src/opendss_mcp/data/: download_official_feeders.py
src/opendss_mcp/data/control_curves/: README.md  custom_template.json  ieee1547.json  rule21.json
src/opendss_mcp/data/ieee_feeders/: IEEE123.dss  IEEE13.dss  IEEE13Nodeckt_SavedVoltages.dbl  (+3 more)
src/opendss_mcp/tools/: capacity.py  der_optimizer.py  feeder_loader.py  power_flow.py  timeseries.py  visualization.py  voltage_checker.py
src/opendss_mcp/utils/: dss_wrapper.py  formatters.py  harmonics.py  inverter_control.py
tests/: .gitkeep  benchmark.py  test_capacity.py  test_der_optimizer.py  test_dss_wrapper.py  test_feeder_loader.py  test_feeders.py  test_harmonics.py  test_integration.py  test_inverter_control.py  test_timeseries.py  test_visualization.py  test_voltage_checker.py
(+7 files in other folders)
