[project]
name = "opendss_mcp"
version = "0.1.0"
description = "OpenDSS MCP Server"

[project.dependencies]
mcp = ">=0.9.0"
opendssdirect.py = ">=0.8.4"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
networkx = ">=3.1"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.4.0"
]
